CT copy/force-app/main/default/objects/Test2Clevertap__CleverTap_Mapping__c/Test2Clevertap__CleverTap_Mapping__c.object-meta.xml
<CustomObject>
    <label>CleverTap Mapping</label>
    <pluralLabel>CleverTap Mappings</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Mapping Name</label>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>