CT copy/force-app/main/default/objects/Test2Clevertap__CleverTap_Mapping__c/fields/Test2Clevertap__Is_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Test2Clevertap__Is_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Mandatory</label>
    <type>Checkbox</type>
</CustomField>