CT copy/force-app/main/default/objects/Test2Clevertap__CleverTap_Mapping__c/fields/Test2Clevertap__Salesforce_Field__c.field-meta.xml
<CustomField>
    <fullName>Test2Clevertap__Salesforce_Field__c</fullName>
    <label>Salesforce Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>