CT copy/force-app/main/default/objects/Test2Clevertap__CleverTap_Mapping__c/fields/Test2Clevertap__Sync_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Test2Clevertap__Sync_Configuration__c</fullName>
    <label>Sync Configuration</label>
    <referenceTo>Test2Clevertap__CleverTap_Sync_Configuration__c</referenceTo>
    <relationshipLabel>Field Mappings</relationshipLabel>
    <relationshipName>Field_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>